# corrade_test

./: .gitmodules  CMakeLists.txt
CMakeModules/: FindCorrade.cmake  SetupCompileFlags.cmake  StandardSettings.cmake
src/: CMakeLists.txt
src/pluginmanager_test/: AbstractAnimal2.h  CMakeLists.txt  Canary_static.cpp  Dog_shared.cpp  main.cpp  plugin.cpp
